--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL=http://localhost:3000/api
-VITE_PAYSTACK_PUBLIC_KEY=pk_test_e218c000a8bb8086854c4d7ae5c5cc3ed2137eef
+# VITE_PAYSTACK_PUBLIC_KEY=pk_test_e218c000a8bb8086854c4d7ae5c5cc3ed2137eef
+VITE_PAYSTACK_PUBLIC_KEY=pk_live_5a7453fa6b60333ae14a8853bb5fe49c02102c11
