--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paystack/inline-js": "^2.22.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "flutterwave-react-v3": "^1.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
