--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@paystack/inline-js": "^2.22.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "flutterwave-react-v3": "^1.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
